# src/model/account.go
@@ -1,0 +1,7 @@
+package model
+
+type Account struct {
+	ID     string `json:"id"`
+	Name   string `json:"name"`
+	Mobile string `json:"mobile"`
+}
