# src/routes/router.go
@@ -3,10 +3,10 @@ package routes
 import (
 	"gin-use/configs"
 	"gin-use/src/controller"
+	"gin-use/src/controller/v1"
 	"gin-use/src/middleware"
-
+    "github.com/gin-gonic/gin"
 	"github.com/gin-contrib/pprof"
-	"github.com/gin-gonic/gin"
 	"github.com/prometheus/client_golang/prometheus/promhttp"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -16,12 +16,18 @@ var r = gin.Default()
 
 func InitRouter() *gin.Engine {
 
-	r.Use(middleware.CORSMiddleware())
+
+	r.Use(middleware.CORSMiddleware(),middleware.RequestInspect())
 
 	api := r.Group("/api")
 	{
 		//健康检查
 		api.GET("/health", controller.Health)
+
+		api.GET("/account/info", v1.AccountInfo)
+
+		api.GET("/account/wechat", v1.Wechat)
+
 
 		//员工
 		// api.GET("/staff", controller.Staff)
